# zulipmcp

./: .gitignore  .mcp.json  CLAUDE.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  claude.md  glama.json  pyproject.toml  test.py  zulip_core.py
tests/: test_agent_backends.py  test_normalize.py
zulipmcp/: __init__.py  __main__.py  agent_backends.py  core.py  default_system_prompt.md  listener.py  mcp.py
